--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,5 @@
 {% extends "main.html" %}
 
-{% block head %}
-{% endblock %}
-
 {% block body %}
-{% include 'likes.svg' %}
+<a href="{{url_for('repositories')}}">Repositories</a>
 {% endblock %}
